# CLogger

./: .gitignore  CLogger.nuspec  CMakeLists.txt  ILogTarget.h  ILogTargetRef.h  LogTargetManager.h  LogTargetManagerRef.cpp  LogTargetManagerRef.h  LogTargetmanager.cpp  Logger.cpp  Logger.h  LoggerRef.cpp  LoggerRef.h  appveyor.yml  pch.cpp  pch.h
Targets/: DebugOutputTarget.h  DebugOutputTargetRef.h  FileOutput.cpp  FileOutput.h  FileOutputRef.h
